Port changes from 1.18.1
Signed-off-by: ApexModder <robsonlawson3@gmail.com>